# continuous-clearing

./: .gitattributes  .gitignore  CA.nuspec  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Dockerfile  GitVersion.yml  LICENSE  MAINTAINERS  README.md  ReadMe_OSS_Continuous-Clearing.html  ReadmeOSS_continuous-clearing_nupkg.html
.github/workflows/: appSettings_Docker.json  build-and-release.yml  build-and-release.yml.yml  calling_CC.yml  calling_CC_binary.yml  cctool-helper-binary.yml  cctool-helper-docker.yml  codeql.yml  compile.yml  continuous-clearing-binary.yml  continuous-clearing.yml  docker-publish.yml  nuget-publish.yml  pr-checks.yml  publish.yml
DemoProject/: ContinuousClearingTool.bat  DemoProject__azure-pipelines-support-npm&nuget.yml  DemoProject__azure-pipelines.yml  DemoProject__azure-pipelines_Debian.yml  LicenseClearingTool.bat
DemoProject/NPMProject/: package-lock.json  package.json
Scripts/: Create_Nuget_Config.ps1  json_update.ps1  json_update_ut.ps1
Scripts/docker_scripts/: sw360_instance_referesh.ps1
UsageDoc/: CA_UsageDocument.md  CLIUsage.txt  CLIUsageNpkg.txt
doc/: appsettings-schema.json
doc/UsageDoc/: CA-Tool--SBOM-Vision.md  CA_UsageDocument.md  CLIUsageNpkg.txt  GITHUB_ACTIONS_GUIDE.md  Manual-attachment-Alpine-Overview .md  (+1 more)
pipelines/: azure-pipelines-UT-IT-Sonar.yml
src/: CA.nuspec  ContinuousClearingTool.sln  LicenseClearingTool.sln
src/LCT.PackageIdentifier.UTest/PackageIdentifierUTTestFiles/PythonTestProject/: README.md  pyproject.toml
templates/: sample-default-app-settings.json
(+1409 files in other folders)
